Closed Bug 1123194 Opened 9 years ago Closed 9 years ago

In inline SVG, textpath doesn't work with a path set to display=none

Categories

(Core :: SVG, defect)

35 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38

People

(Reporter: charlie.pasternak, Assigned: longsonr)

References

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:35.0) Gecko/20100101 Firefox/35.0
Build ID: 20150108202552

Steps to reproduce:

I have an inline SVG image which contains a path which has attribute display="none", and a textpath referring to that path. An example is attached; the first SVG has display:none on the path, the second does not.


Actual results:

The text does not display along the path, instead displaying at the upper left corner of the viewbox (in the attached example, the text is vertically offset so it's still visible).


Expected results:

The text should still follow the path, according to https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/display
Attached image Screenshot
Attached patch none.txtSplinter Review
Assignee: nobody → longsonr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8551560 - Flags: review?(cam)
Attachment #8551560 - Flags: review?(cam) → review+
If you can make the test fail if the textPath doesn't render at all, that'd be good.
https://hg.mozilla.org/mozilla-central/rev/1ca2899dd31b
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: