Bug 1123194 - make textPath work with a path that is display:none r=heycam